# CPPML

./: .gitignore  Makefile  README  TODO  aMakefile.txt  configure.ac  remake.py  remake.sh
include/: LinearAlgebra.hpp  activation.hpp  activation_func.hpp  cost_func.hpp  data.hpp  helper.hpp  layer.hpp  network.hpp  optimizer.hpp  random.hpp  shape.hpp
src/: LinearAlgebra.cpp  LinearAlgebra.hpp  Makefile  Makefile.am  activation.cpp  activation_func.cpp  cost_func.cpp  cost_func.hpp  data.cpp  data.hpp  helper.cpp  helper.hpp  layer.cpp  network.cpp  network.hpp  random.cpp  shape.cpp
src/Layers/: activation.cpp  conv2d.cpp  cross_attention.cpp  cross_attention.hpp  dense.cpp  dense.hpp  dropout.cpp  embedding.cpp  group_norm.cpp  image_flatten.cpp  image_flatten.hpp  input.cpp  maxpooling2d.cpp  maxpooling2d.hpp  self_attention.cpp  self_attention.hpp  upscale2d.cpp
src/Optimizers/: adam.cpp  adam.hpp  sgd.cpp  sgd.hpp
tests/: Makefile  clean.py  conv_layer_nopadding_test.cpp  conv_layer_padding_test.cpp  cross_attention_layer_large_embed_test.cpp  cross_attention_layer_large_output_test.cpp  cross_attention_layer_multi_input_test.cpp  cross_attention_layer_small_embed_test.cpp  cross_attention_layer_small_output_test.cpp  cross_attention_layer_test.cpp  cross_entropy_cost_test.cpp  dense_layer_test.cpp  elu_activation_test.cpp  huber_cost_test.cpp  image_flatten_layer_extra_embed_test.cpp  image_flatten_layer_odd_test.cpp  image_flatten_layer_test.cpp  layer_test.hpp  linear_activation_test.cpp  mae_cost_test.cpp  maxpooling_layer_different_scale_test.cpp  (+16 more)
(+62 files in other folders)
